// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`svgr in bundleless 1`] = `
"var __webpack_modules__ = {
    "./src/assets/logo.svg?__rslib_entry__": function(module, __unused_webpack_exports, __webpack_require__) {
        module.exports = require('../static/svg/logo.svg');
    }
};
var __webpack_module_cache__ = {};
function __webpack_require__(moduleId) {
    var cachedModule = __webpack_module_cache__[moduleId];
    if (void 0 !== cachedModule) return cachedModule.exports;
    var module = __webpack_module_cache__[moduleId] = {
        exports: {}
    };
    __webpack_modules__[moduleId](module, module.exports, __webpack_require__);
    return module.exports;
}
(()=>{
    __webpack_require__.g = function() {
        if ('object' == typeof globalThis) return globalThis;
        try {
            return this || new Function('return this')();
        } catch (e) {
            if ('object' == typeof window) return window;
        }
    }();
})();
(()=>{
    var scriptUrl;
    if ("string" == typeof import.meta.url) scriptUrl = import.meta.url;
    if (!scriptUrl) throw new Error("Automatic publicPath is not supported in this browser");
    scriptUrl = scriptUrl.replace(/#.*$/, "").replace(/\\?.*$/, "").replace(/\\/[^\\/]+$/, "/");
    __webpack_require__.p = scriptUrl + '../';
})();
__webpack_require__("./src/assets/logo.svg?__rslib_entry__");
"
`;

exports[`svgr in bundleless 2`] = `
""use strict";
var __webpack_modules__ = {
    "./src/assets/logo.svg?__rslib_entry__": function(module, __unused_webpack_exports, __webpack_require__) {
        module.exports = require('../static/svg/logo.svg');
    }
};
var __webpack_module_cache__ = {};
function __webpack_require__(moduleId) {
    var cachedModule = __webpack_module_cache__[moduleId];
    if (void 0 !== cachedModule) return cachedModule.exports;
    var module = __webpack_module_cache__[moduleId] = {
        exports: {}
    };
    __webpack_modules__[moduleId](module, module.exports, __webpack_require__);
    return module.exports;
}
(()=>{
    __webpack_require__.g = function() {
        if ('object' == typeof globalThis) return globalThis;
        try {
            return this || new Function('return this')();
        } catch (e) {
            if ('object' == typeof window) return window;
        }
    }();
})();
(()=>{
    var scriptUrl;
    if (__webpack_require__.g.importScripts) scriptUrl = __webpack_require__.g.location + "";
    var document = __webpack_require__.g.document;
    if (!scriptUrl && document) {
        if (document.currentScript && 'SCRIPT' === document.currentScript.tagName.toUpperCase()) scriptUrl = document.currentScript.src;
        if (!scriptUrl) {
            var scripts = document.getElementsByTagName("script");
            if (scripts.length) {
                var i = scripts.length - 1;
                while(i > -1 && (!scriptUrl || !/^http(s?):/.test(scriptUrl)))scriptUrl = scripts[i--].src;
            }
        }
    }
    if (!scriptUrl) throw new Error("Automatic publicPath is not supported in this browser");
    scriptUrl = scriptUrl.replace(/#.*$/, "").replace(/\\?.*$/, "").replace(/\\/[^\\/]+$/, "/");
    __webpack_require__.p = scriptUrl + '../';
})();
var __webpack_exports__ = __webpack_require__("./src/assets/logo.svg?__rslib_entry__");
var __webpack_export_target__ = exports;
for(var __webpack_i__ in __webpack_exports__)__webpack_export_target__[__webpack_i__] = __webpack_exports__[__webpack_i__];
if (__webpack_exports__.__esModule) Object.defineProperty(__webpack_export_target__, '__esModule', {
    value: true
});
"
`;
